test/files/neg/t0015.check
t0015.scala:5: error: type mismatch;
 found   : () => Nothing
 required: Nothing => ?
   Nil.map(f _)
           ^
one error found
